fix: visible change password form

--- a/public/index.scss
+++ b/public/index.scss
@@ -347,7 +347,7 @@ input::placeholder, textarea::placeholder {
 
 @media (max-width: 2560px) {
     * {
-        font-size: 1.2vw;
+        font-size: 1vw;
     }
     .menu {
         display: flex;
